--- a/public/banana/member/memberList.html
+++ b/public/banana/member/memberList.html
@@ -17,12 +17,12 @@ table, th, td {
 	border-right-width: 0px;
 }
 
-
 th, td {
 	padding: 15px;
 }
 
-th {
+.oddrow {
+	background-color: azure;
 }
 </style>
 
@@ -34,7 +34,8 @@ th {
 
 	<table>
 
-		<tr style="background-color: azure;">
+		<tr class="oddrow">
+			<th>번호</th>
 			<th>이름</th>
 			<th>성별</th>
 			<th>아이디</th>
@@ -44,15 +45,18 @@ th {
 			<th>연락처</th>
 		</tr>
 		<tr>
+			<td>1</td>
 			<td><a href="./memberView.html">윤영민</a></td>
 			<td>남</td>
 			<td>yym2044</td>
 			<td>111</td>
 			<td>yym@naver.com</td>
 			<td>960607</td>
-			<td>01011111111</td>
+			<td>01046356670</td>
 		</tr>
-		<tr style="background-color: azure;">
+
+		<tr class="oddrow">
+			<td>2</td>
 			<td>윤둘</td>
 			<td>남</td>
 			<td>dool</td>
@@ -62,6 +66,7 @@ th {
 			<td>01022222222</td>
 		</tr>
 		<tr>
+			<td>3</td>
 			<td>윤셋</td>
 			<td>남</td>
 			<td>set</td>
@@ -70,7 +75,8 @@ th {
 			<td>930303</td>
 			<td>01033333333</td>
 		</tr>
-		<tr style="background-color: azure;">
+		<tr class="oddrow">
+			<td>4</td>
 			<td>윤넷</td>
 			<td>여</td>
 			<td>net</td>
@@ -78,6 +84,46 @@ th {
 			<td>net@daum.net</td>
 			<td>940404</td>
 			<td>01044444444</td>
+		</tr>
+		<tr>
+			<td>5</td>
+			<td>윤다섯</td>
+			<td>남</td>
+			<td>da</td>
+			<td>555</td>
+			<td>da@google.com</td>
+			<td>950505</td>
+			<td>01055555555</td>
+		</tr>
+		<tr class="oddrow">
+			<td>6</td>
+			<td>윤여섯</td>
+			<td>여</td>
+			<td>yeo</td>
+			<td>666</td>
+			<td>yeo@daum.net</td>
+			<td>960606</td>
+			<td>01066666666</td>
+		</tr>
+		<tr>
+			<td>7</td>
+			<td>윤세븐</td>
+			<td>남</td>
+			<td>sev</td>
+			<td>777</td>
+			<td>sev@google.com</td>
+			<td>970707</td>
+			<td>01077777777</td>
+		</tr>
+		<tr class="oddrow">
+			<td>8</td>
+			<td>윤에잇</td>
+			<td>여</td>
+			<td>eig</td>
+			<td>888</td>
+			<td>eig@daum.net</td>
+			<td>980808</td>
+			<td>01088888888</td>
 		</tr>
 	</table>
 	<a href="./memberForm.html">등록</a>
