--- a/public/cherry/member/memberList.html
+++ b/public/cherry/member/memberList.html
@@ -1,31 +1,29 @@
 <!DOCTYPE HTML>
-<html lang="ko">
+<html lang="kor">
+
 <head>
 <meta charset="uTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Yun html projects memberList</title>
+<title>Yun html projects memberView</title>
 
-<style type="text/css">
-table, th, td {
-	border: 1px solid black;
-	border-collapse: collapse;
-}
 
-th, td {
-	padding: 8px;
-}
-</style>
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 </head>
 
 <body>
-	MemberList.html
 
-	<table border="1">
+	<table class="table caption-top table-hover table-borderless">
 
-		<tr>
+		<caption class="text-center">
+			<div class="badge bg-success text-wrap" style="width: 12rem;">
+				<b style="font-size: 30px; align-self: center;">회원목록</b>
+			</div>
+		</caption>
+		
+		<tr class="table-success">
 			<th>이름</th>
 			<th>성별</th>
 			<th>아이디</th>
@@ -71,6 +69,14 @@ th, td {
 			<td>01044444444</td>
 		</tr>
 	</table>
-	<a href="./memberForm.html">등록</a>
+
+
+	<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+		<a class="btn btn-success" href="./memberForm.html" role="button">등록</a>
+	</div>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html>
