--- a/public/cherry/member/memberView.html
+++ b/public/cherry/member/memberView.html
@@ -7,26 +7,25 @@
 
 <title>Yun html projects memberView</title>
 
-<style type="text/css">
-table, th, td {
-	border: 1px solid black;
-	border-collapse: collapse;
-}
 
-th, td {
-	padding: 8px;
-}
-</style>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 </head>
 
 <body>
 	memberView.html
 
-	<table border="1">
-		<caption>
-			<b>회원정보</b>
+	<table class="table caption-top table-striped table-hover table-bordered border-secondary table-sm align-middle">
+
+
+		<caption class="text-center">
+			<div class="badge bg-success text-wrap" style="width: 12rem;">
+				<b style="font-size: 30px; align-self: center;">회원정보</b>
+			</div>
 		</caption>
+
+
 		<tr>
 			<th>이름</th>
 			<td>윤영민</td>
@@ -120,7 +119,7 @@ th, td {
 		</tr>
 	</table>
 
-	<table>
+	<table class="table table-striped table-hover table-bordered border-secondary table-sm align-middle">
 		<tr>
 			<th>번호</th>
 			<th>프로젝트명</th>
@@ -144,8 +143,12 @@ th, td {
 		</tr>
 
 	</table>
-	<a href="./memberList.html">목록</a>
-	<a href="./memberEdit.html">수정</a>
-	<a href="./memberList.html">삭제</a>
+
+	<a class="btn btn-primary" href="./memberList.html" role="button">목록</a>
+	<a class="btn btn-success" href="./memberEdit.html" role="button">수정</a>
+	<a class="btn btn-danger" href="./memberList.html" role="button">삭제</a>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
