--- a/public/cherry/member/memberView.html
+++ b/public/cherry/member/memberView.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body class="container">
 	memberView.html
 
 	<table class="table caption-top table-striped table-hover table-bordered border-secondary table-sm align-middle">
