--- a/public/cherry/member/memberView.html
+++ b/public/cherry/member/memberView.html
@@ -16,7 +16,7 @@
 <body class="container">
 	memberView.html
 
-	<table class="table caption-top table-striped table-hover table-bordered border-secondary table-sm align-middle">
+	<table class="table caption-top table-hover table-bordered border-secondary table-sm align-middle">
 
 
 		<caption class="text-center">
@@ -27,115 +27,115 @@
 
 
 		<tr>
-			<th>이름</th>
+			<th class="text-center table-success">이름</th>
 			<td>윤영민</td>
-			<th>성별</th>
+			<th class="text-center table-success">성별</th>
 			<td>남</td>
 		</tr>
 		<tr>
-			<th>아이디</th>
+			<th class="text-center table-success">아이디</th>
 			<td>yym2044</td>
-			<th>비밀번호</th>
+			<th class="text-center table-success">비밀번호</th>
 			<td>*********</td>
 		</tr>
 		<tr>
-			<th>생일</th>
+			<th class="text-center table-success">생일</th>
 			<td>1996.06.07</td>
-			<th>국적</th>
+			<th class="text-center table-success">국적</th>
 			<td>대한민국</td>
 		</tr>
 		<tr>
-			<th>주소</th>
+			<th class="text-center table-success">주소</th>
 			<td colspan="3">경기도 남양주시</td>
 		</tr>
 		<tr>
-			<th>모바일</th>
+			<th class="text-center table-success">모바일</th>
 			<td>010-4635-6670</td>
-			<th>모바일 마케팅 수신 동의</th>
+			<th class="text-center table-success">모바일 마케팅 수신 동의</th>
 			<td>예</td>
 		</tr>
 		<tr>
-			<th>전화번호</th>
+			<th class="text-center table-success">전화번호</th>
 			<td>031-527-6685</td>
-			<th>팩스번호</th>
+			<th class="text-center table-success">팩스번호</th>
 			<td>12346576</td>
 		</tr>
 		<tr>
-			<th>이메일</th>
+			<th class="text-center table-success">이메일</th>
 			<td>yym2044@naver.com</td>
-			<th>이메일 마케팅 수신 동의</th>
+			<th class="text-center table-success">이메일 마케팅 수신 동의</th>
 			<td>예</td>
 
 		</tr>
 
 		<tr>
-			<th>추천인</th>
+			<th class="text-center table-success">추천인</th>
 			<td colspan="3">김하나, 김둘, 김셋</td>
 		</tr>
 		<tr>
-			<th>비밀번호 문제</th>
+			<th class="text-center table-success">비밀번호 문제</th>
 			<td></td>
-			<th>비밀번호 답</th>
+			<th class="text-center table-success">비밀번호 답</th>
 			<td>asdfagdsa</td>
 		</tr>
 
 
 		<tr>
-			<th>sns</th>
+			<th class="text-center table-success">sns</th>
 			<td>facebook</td>
-			<th>사진</th>
+			<th class="text-center table-success">사진</th>
 			<td><img src="./winter.jpeg" width="100"></td>
 		</tr>
 		<tr>
-			<th>홈페이지</th>
+			<th class="text-center table-success">홈페이지</th>
 			<td>blog.naver.com/~~</td>
-			<th>희망 직업</th>
+			<th class="text-center table-success">희망 직업</th>
 			<td>개발자</td>
 		</tr>
 		<tr>
-			<th>취미</th>
+			<th class="text-center table-success">취미</th>
 			<td colspan="3">스마트폰, 음악감상, 스포츠</td>
 		</tr>
 		<tr>
-			<th>결혼여부</th>
+			<th class="text-center table-success">결혼여부</th>
 			<td>아니오</td>
-			<th>결혼기념일</th>
+			<th class="text-center table-success">결혼기념일</th>
 			<td>-</td>
 		</tr>
 		<tr>
-			<th>자녀유무</th>
+			<th class="text-center table-success">자녀유무</th>
 			<td>아니오</td>
 
-			<th>좋아하는 색깔</th>
+			<th class="text-center table-success">좋아하는 색깔</th>
 			<td>#000000</td>
 		</tr>
 		<tr>
-			<th height="200">본인 소개</th>
+			<th height="200" class="text-center table-success">본인 소개</th>
 			<td colspan="3">안녕하세요 반갑습니다. 저는 윤영민이라고 합니다. 잘 부탁드립니다.</td>
 		</tr>
 		<tr>
-			<th>개인정보유효기간</th>
+			<th class="text-center table-success">개인정보유효기간</th>
 			<td colspan="3">10년</td>
 		</tr>
 	</table>
 
 	<table class="table table-striped table-hover table-bordered border-secondary table-sm align-middle">
 		<tr>
-			<th>번호</th>
-			<th>프로젝트명</th>
-			<th>기간</th>
-			<th width="500">프로젝트 내용</th>
-			<th>발주처</th>
+			<th class="text-center table-success">번호</th>
+			<th class="text-center table-success">프로젝트명</th>
+			<th class="text-center table-success">기간</th>
+			<th width="500" class="text-center table-success">프로젝트 내용</th>
+			<th class="text-center table-success">발주처</th>
 		</tr>
 		<tr>
-			<th>1</th>
+			<th class="text-center table-success">1</th>
 			<td>웹</td>
 			<td>2020.08~2021.01</td>
 			<td>웹 개발</td>
 			<td>자체개발</td>
 		</tr>
 		<tr>
-			<th>2</th>
+			<th class="text-center table-success">2</th>
 			<td>안드로이드</td>
 			<td>2021.02~2022.01</td>
 			<td>안드로이드 개발</td>
@@ -143,10 +143,11 @@
 		</tr>
 
 	</table>
-
-	<a class="btn btn-primary" href="./memberList.html" role="button">목록</a>
-	<a class="btn btn-success" href="./memberEdit.html" role="button">수정</a>
-	<a class="btn btn-danger" href="./memberList.html" role="button">삭제</a>
+<br>
+	<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+		<a class="btn btn-primary" href="./memberList.html" role="button">목록</a> <a class="btn btn-success" href="./memberEdit.html" role="button">수정</a> <a
+			class="btn btn-danger" href="./memberList.html" role="button">삭제</a>
+	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
