--- a/public/cherry/member/memberEdit.html
+++ b/public/cherry/member/memberEdit.html
@@ -7,42 +7,34 @@
 
 <title>Yun html projects memberView</title>
 
-<style type="text/css">
-table, th, td {
-	border: 1px solid black;
-	border-collapse: collapse;
-}
-
-th, td {
-	padding: 8px;
-}
-</style>
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
-<body>
-	memberEdit.html
+<body class="container">
 	<form action="" method="get" id="" name="memberEditForm" enctype="multipart/form-data">
-		<table border="1">
-			<caption>
-				<b>회원정보</b>
+		<table class="table caption-top table-hover table-bordered border-secondary table-sm align-middle">
+			<caption class="text-center">
+				<div class="badge bg-success text-wrap" style="width: 12rem;">
+					<b style="font-size: 30px; align-self: center;">회원등록</b>
+				</div>
 			</caption>
 			<tr>
-				<th>이름</th>
+				<th class="text-center table-success">이름</th>
 				<td><input type="text" id="" name="name" value="윤영민"></td>
-				<th>성별</th>
+				<th class="text-center table-success">성별</th>
 				<td><input type="radio" id="" name="gender" checked>남 <input type="radio" id="" name="gender">여</td>
 			</tr>
 			<tr>
-				<th>아이디</th>
+				<th class="text-center table-success">아이디</th>
 				<td><input type="text" id="" name="id" value="yym2044"></td>
-				<th>비밀번호</th>
+				<th class="text-center table-success">비밀번호</th>
 				<td><input type="password" id="" name="password" value="yym2044"></td>
 			</tr>
 			<tr>
-				<th>생년월일</th>
+				<th class="text-center table-success">생년월일</th>
 				<td><input type="date" id="" name="birthDate" value="1996-06-07"></td>
-				<th>국적</th>
+				<th class="text-center table-success">국적</th>
 				<td><select id="" name="country">
 						<option>대한민국</option>
 						<option>미국</option>
@@ -54,23 +46,23 @@ th, td {
 				</select></td>
 			</tr>
 			<tr>
-				<th>주소</th>
+				<th class="text-center table-success">주소</th>
 				<td colspan="3"><input type="text" id="" name="address" size="100" value="경기도 남양주시"></td>
 			</tr>
 			<tr>
-				<th>모바일</th>
+				<th class="text-center table-success">모바일</th>
 				<td><select id="" name="carrier">
 						<option selected>SKT
 						<option>KT
 						<option>LG
 				</select> <input type="text" id="" name="phone1" size="3" value="010"> - <input type="text" id="" name="phone2"
 					size="4" value="4635"> - <input type="text" id="" name="phone3" size="4" value="6670"></td>
-				<th>모바일 마케팅 수신 동의</th>
+				<th class="text-center table-success">모바일 마케팅 수신 동의</th>
 				<td><input type="radio" id="" name="mobile_marketing" value="1" checked>예 <input type="radio" id=""
 					name="mobile_marketing" value="2">아니오</td>
 			</tr>
 			<tr>
-				<th>전화번호</th>
+				<th class="text-center table-success">전화번호</th>
 				<td><select id="" name="homeNumber2">
 						<option>02
 						<option selected>031
@@ -91,52 +83,52 @@ th, td {
 						<option>064
 				</select> - <input type="text" id="" name="homeNumber2" size="3" value="527"> - <input type="text" id=""
 					name="homeNumber3" size="4" value="6685"></td>
-				<th>팩스번호</th>
+				<th class="text-center table-success">팩스번호</th>
 				<td><input type="text" id="" name="faxNumber" value="12346576"></td>
 			</tr>
 			<tr>
-				<th>이메일</th>
+				<th class="text-center table-success">이메일</th>
 				<td><input type="email" id="" name="email" value="yym2044@naver.com"></td>
-				<th>이메일 마케팅 수신 동의</th>
+				<th class="text-center table-success">이메일 마케팅 수신 동의</th>
 				<td><input type="radio" id="" name="email_marketing" value="1" checked>예 <input type="radio" id=""
 					name="email_marketing" value="2">아니오</td>
 
 			</tr>
 
 			<tr>
-				<th>추천인</th>
+				<th class="text-center table-success">추천인</th>
 				<td colspan="3"><input type="text" id="" name="recommender1" value="김하나"> <input type="text" id=""
 					name="recommender2" value="김둘"> <input type="text" id="" name="recommender3" value="김셋"></td>
 			</tr>
 			<tr>
-				<th>비밀번호 문제</th>
+				<th class="text-center table-success">비밀번호 문제</th>
 				<td><select id="" name="pwQuestion">
 						<option>나의 보물 1호는?</option>
 						<option selected>나의 고향은?</option>
 						<option>내가 키우는 애완동물의 이름은?</option>
 						<option>가장 친한 친구 이름은?</option>
 				</select></td>
-				<th>비밀번호 답</th>
+				<th class="text-center table-success">비밀번호 답</th>
 				<td><input type="text" id="" name="pwAnswer" value="정읍"></td>
 			</tr>
 
 
 			<tr>
-				<th>sns</th>
+				<th class="text-center table-success">sns</th>
 				<td><select id="" name="sns"><option>insta</option>
 						<option selected>facebook</option>
 						<option>twitter</option></select> <input type="text" id="" name="snsText"></td>
-				<th>사진</th>
+				<th class="text-center table-success">사진</th>
 				<td><input type="file" id="" name="photo"></td>
 			</tr>
 			<tr>
-				<th>홈페이지</th>
+				<th class="text-center table-success">홈페이지</th>
 				<td><input type="text" id="" name="homepage" value="blog.naver.com/~~"></td>
-				<th>희망 직업</th>
+				<th class="text-center table-success">희망 직업</th>
 				<td><input type="text" id="" name="jobSeek" value="개발자"></td>
 			</tr>
 			<tr>
-				<th>취미</th>
+				<th class="text-center table-success">취미</th>
 				<td colspan="3"><input type="checkbox" id="" name="hobby" value="movie">영화시청 <input type="checkbox"
 					id="" name="hobby" value="smartphone" checked>스마트폰 <input type="checkbox" id="" name="hobby"
 					value="reading">독서 <input type="checkbox" id="" name="hobby" value="shopping">쇼핑 <input
@@ -148,27 +140,27 @@ th, td {
 					<input type="checkbox" id="" name="hobby" value="else">기타</td>
 			</tr>
 			<tr>
-				<th>결혼여부</th>
+				<th class="text-center table-success">결혼여부</th>
 				<td><input type="radio" id="" name="marriage" value="1">예 <input type="radio" id="" name="marriage"
 					value="2" checked>아니오</td>
-				<th>결혼기념일</th>
+				<th class="text-center table-success">결혼기념일</th>
 				<td>-</td>
 			</tr>
 			<tr>
-				<th>자녀유무</th>
+				<th class="text-center table-success">자녀유무</th>
 				<td><input type="radio" id="" name="child" value="1">예<input type="radio" id="" name="child" value="2"
 					checked>아니오</td>
 
 
-				<th>좋아하는 색깔</th>
+				<th class="text-center table-success">좋아하는 색깔</th>
 				<td><input type="color" id="" name="color"></td>
 			</tr>
 			<tr>
-				<th>본인 소개</th>
+				<th class="text-center table-success">본인 소개</th>
 				<td colspan="3"><textarea id="" name="introduce" rows="5" cols="110" placeholder="여기에 본인 소개를 작성해주세요.">안녕하세요 반갑습니다 저는 윤영민이라고 합니다 잘 부탁드립니다.</textarea></td>
 			</tr>
 			<tr>
-				<th>개인정보유효기간</th>
+				<th class="text-center table-success">개인정보유효기간</th>
 				<td colspan="3"><select id="" name="expireDate">
 						<option>1년</option>
 						<option>3년</option>
@@ -178,16 +170,16 @@ th, td {
 			</tr>
 		</table>
 
-		<table>
+		<table class="table caption-top table-hover table-bordered border-secondary table-sm align-middle">
 			<tr>
-				<th>번호</th>
-				<th>프로젝트명</th>
-				<th>기간</th>
-				<th>프로젝트 내용</th>
-				<th>발주처</th>
+				<th class="text-center table-success">번호</th>
+				<th class="text-center table-success">프로젝트명</th>
+				<th class="text-center table-success">기간</th>
+				<th class="text-center table-success">프로젝트 내용</th>
+				<th class="text-center table-success">발주처</th>
 			</tr>
 			<tr>
-				<th>1</th>
+				<th class="text-center table-success">1</th>
 				<td><input type="text" id="" name="projectName1" value="웹"></td>
 				<td>시작일 : <input type="month" id="" name="term1s" value="2020-08"> ~ 종료일 : <input type="month" id=""
 					name="term1e" value="2021-01"></td>
@@ -195,7 +187,7 @@ th, td {
 				<td><input type="text" id="" name="buyer1" value="자체개발"></td>
 			</tr>
 			<tr>
-				<th>2</th>
+				<th class="text-center table-success">2</th>
 				<td><input type="text" id="" name="projectName2" value="안드로이드"></td>
 				<td>시작일 : <input type="month" id="" name="term2s" value="2021-02"> ~ 종료일 : <input type="month" id=""
 					name="term2e" value="2022-01"></td>
@@ -205,6 +197,9 @@ th, td {
 
 		</table>
 	</form>
-	<a href="./memberList.html">목록</a>
+	<br>
+	<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+		<a class="btn btn-success" href="./memberList.html" role="button">목록</a>
+	</div>
 </body>
 </html>
