--- a/public/bootstrapexc.html
+++ b/public/bootstrapexc.html
@@ -8,10 +8,32 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+<style type="text/css">
+a {
+	text-decoration: none;
+}
+</style>
+
 </head>
 
 <body>
 
+
+	<script type="text/javascript">
+function showfield(name){
+  if(name=='Other')document.getElementById('div1').innerHTML='Other: <input type="text" name="other" />';
+  else document.getElementById('div1').innerHTML='';
+}
+</script>
+
+	<select name="travel_arriveVia" id="travel_arriveVia" onchange="showfield(this.options[this.selectedIndex].value)">
+<option selected="selected">Please select ...</option>
+<option value="Plane">Plane</option>
+<option value="Train">Train</option>
+<option value="Own Vehicle">Own Vehicle</option>
+<option value="Other">Other</option>
+</select>
+<div id="div1"></div>
 
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
