--- a/public/durian/html/xdmin/loginout/login3.html
+++ b/public/durian/html/xdmin/loginout/login3.html
@@ -12,13 +12,14 @@
 </head>
 
 <body>
-	<form class="form-inline">
+	<form>
 		<div class="container bg-light">
 			<br>
 			<div class="row justify-content-center">
 				<img src="../../../images/xdmin/coupang.png" alt="coupang_logo" style="width: 300px;">
 			</div>
 			<br>
+
 			<div class="row justify-content-center">
 				<div style="width: 380px;" class="p-0">
 
@@ -40,21 +41,6 @@
 							</div>
 						</div>
 					</div>
-<br><br>
-					
-					
-					<div class="list-group-item d-flex gap-3 py-3">
-						<div class="col-1">
-							<img src="../../../images/xdmin/user.png" alt="" width="32" height="32">
-						</div>
-						<div class="col-10">
-							<input type="text" class="form-control" placeholder="user name">
-						</div>
-					</div>
-
-
-
-
 
 					<br>
 					<div class="row">
@@ -69,46 +55,19 @@
 						</div>
 					</div>
 					<br>
+
 					<div class="row">
 						<div class="col-12">
 							<input type="submit" value="로그인" class="form-control">
 						</div>
 					</div>
+
 				</div>
 			</div>
 
 
 			<br> <br>
 
-
-			<!-- <div class="row">
-				<div class="text-center">
-					<button type="button" class="btn btn-primary mb-1 btn-block">
-						<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png"> 페이스북 계정으로 로그인
-					</button>
-				</div>
-			</div>
-			<div class="row">
-				<div class="text-center">
-					<button type="button" class="btn btn-warning mb-1 btn-block">
-						<img src="../../../images/xdmin/sns_icon/icon_round_kakaotalk_48.png"> 카카오 계정으로 로그인
-					</button>
-				</div>
-			</div>
-			<div class="row">
-				<div class="text-center">
-					<button type="button" class="btn btn-success mb-1 btn-block">
-						<img src="../../../images/xdmin/sns_icon/icon_round_naver_48.png"> 네이버 계정으로 로그인
-					</button>
-				</div>
-			</div>
-			<div class="row">
-				<div class="text-center">
-					<button type="button" class="btn btn-default mb-1 border btn-block">
-						<img src="../../../images/xdmin/sns_icon/icon_round_google_48.png"> 구글 계정으로 로그인
-					</button>
-				</div>
-			</div> -->
 
 			<div class="d-flex justify-content-center">
 				<div class="row row-cols-1" style="width: 380px;">
